[package]
name = "ubus"
version = "0.1.0"
authors = ["James Lee <jbit@jbit.net>"]
edition = "2018"
description = "Work-in-progress: OpenWRT ubus client library in pure Rust"
keywords = ["no-std", "openwrt"]
categories = ["no-std"]
license = "BSD-2-Clause"

[badges]
maintenance = { status = "experimental" }

[features]
default = []
no_std = []

[dependencies]
storage_endian = { git = "https://github.com/jbit/storage_endian" }
